Tue Aug 20 01:19:22 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Define ac_cv_func_clock_gettime to yes for mingw*.

Mon Aug 19 21:31:35 2013  Tanaka Akira  <akr@fsij.org>

	* include/ruby/defines.h: Fix a compilation error with
	  i586-mingw32msvc-gcc of gcc-mingw32 package on Debian squeeze.
	  ruby/missing.h should be included before include/ruby/win32.h
	  because struct timespec, used in the clock_gettime declaration in
	  include/ruby/win32.h, is defined in ruby/missing.h instead of
	  system headers.

Mon Aug 19 20:55:12 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: fix around GC_DEBUG.

	* gc.c (RVALUE::line): should be VALUE. On some environment
	  (such as mswin64), `int' introduces alignment mismatch.

	* gc.c (newobj_of): add an assertion to check VALUE alignment.

	* gc.c (aligned_malloc): `&' is low priority than `=='.

	* gc.c: define GC_DEBUG everytime and use it as value 0 or 1.

Mon Aug 19 17:43:44 2013  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_fiber.rb: collect garbage fibers immediately.

Mon Aug 19 17:41:49 2013  Koichi Sasada  <ko1@atdot.net>

	* test/profile_test_all.rb: add `failed?' information.

Mon Aug 19 17:00:53 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (retry_fork): retry with GC if ENOMEM occurred, to free
	  swap/kernel space.

Mon Aug 19 13:28:47 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/win32.h (CLOCK_MONOTONIC): typo.

	* win32/win32.c: removed duplicated declarations.

Mon Aug 19 13:03:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (clock_gettime): should not overwrite cache variable
	  with different condition.  otherwise -lrt is not linked and the link
	  fails, after reconfig.

Mon Aug 19 12:56:49 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (Init_process): Add constants: CLOCK_REALTIME_ALARM and
	  CLOCK_BOOTTIME_ALARM.

Sun Aug 18 20:17:41 2013  Kazuki Tsujimoto  <kazuki@callcc.net>

	* variable.c, vm_method.c: remove dead code.
